--- a/alpha/cityfusion_admin/templates/cf-admin/change_venue_owner.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/change_venue_owner.html
@@ -8,7 +8,7 @@
     <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/select2.css" rel="stylesheet" type="text/css" />
     <script src="{{STATIC_URL}}js/select2.min.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/actions/change-event-owner.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/actions/change-venue-owner.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block page %}
@@ -16,19 +16,19 @@
         {% cf_admin_menu 'transfer_to_owner' %}
         <div class="box visible options">
             <ul class="tabs">
-                <li class="current">
-                    <span>Event owner</span>
+                <li>
+                    <a href="{% url 'change_event_owner_search' %}"><span>Event owner</span></a>
                 </li>
                 <li>
                     <a href="{% url 'mass_event_transfer' %}"><span>Mass event transferring</span></a>
                 </li>
-                <li>
-                    <a href="{% url 'change_venue_owner_search' %}"><span>Venue owner</span></a>
+                <li class="current">
+                    <span>Venue owner</span>
                 </li>
             </ul>
             <div class="box visible options">
                 <h1>
-                    Search events
+                    Search venues
                 </h1>
                 <form method="post" name="search-events" >
                     {% csrf_token %}
@@ -39,25 +39,23 @@
 
                 <table class="profile-table" celpadding="0" cellspacing="0">
                     <tr>
-                        <th>Event</th>
+                        <th>Venue</th>
                         <th>Owner</th>
                         <th width="50%">Change owner</th>
                     </tr>
 
-                    {% paginate 10 events %}
+                    {% paginate 10 venue_accounts %}
 
-                    {% for event in events %}
+                    {% for venue_account in venue_accounts %}
                     <tr>
                         <td>
-                            <div class="entry-wrapper">
-                                {% event_block event %}
-                            </div>
+                            {{ venue_account.venue.name }}
                         </td>
                         <td>
-                            {{ event.owner }}
+                            {{ venue_account.account.user }}
                         </td>
                         <td>
-                            <form method="post" name="event-change-owner" action="{% url 'change_event_owner' event.slug %}">
+                            <form method="post" name="venue-change-owner" action="{% url 'change_venue_owner' venue_account.id %}">
                                 {% csrf_token %}
                                 <input type="hidden" name="search" value="{{ search }}">
                                 <input name="owner_id" class="user-input" value="" data-ajax-url="{% url 'admin_user_autocomplete' %}"  />
@@ -68,7 +66,7 @@
                     {% empty %}
                         <tr>
                             <td colspan="4">
-                                No events was found
+                                No venues was found
                             </td>
                         </tr>
                     {% endfor %}
