--- a/alpha/event/templates/events/_searchpad_datetime_menu.html
+++ b/alpha/event/templates/events/_searchpad_datetime_menu.html
@@ -33,6 +33,113 @@
 
     <div class="jump-popup">
         <div>
+            <div class="jump-popup__date-row">
+                <div class="jump-popup__date-cell">
+                    <div class="jump-popup__legend-wrapper">
+                        <div class="checkbox jump-popup__checkbox">
+                            <input id="dateJumpToDateCheckbox" type="checkbox" class="date-checkbox" checked>
+                            <label for="dateJumpToDateCheckbox">  </label>
+                            <span class="jump-popup__legend">Select Start Date</span>
+                        </div>
+                    </div>
+                    <div class="start-date inline">
+                        <div class="date dropdown">
+                            <input type="text"
+                                value="{% if start_date %}{{ start_date|date:"SHORT_DATE_FORMAT"}}{% else %}{% now "SHORT_DATE_FORMAT" %}{% endif %}">
+                        </div>
+                    </div>
+                </div>
+                <div class="jump-popup__time-cell">
+                    <div class="jump-popup__legend-wrapper">
+                        <div class="checkbox jump-popup__checkbox">
+                            <input id="startTimeJumpToDateCheckbox" type="checkbox" class="start-time-checkbox">
+                            <label for="startTimeJumpToDateCheckbox"> </label>
+                            <span class="jump-popup__legend">Start Time</span>
+                        </div>
+                    </div>
+
+                    <div class="start-time inline" disabled="disabled">
+                        <div class="timepicker">
+                            <div class="time dropdown" data-dropdown-class="time" data-value="{{ start_time|hour12 }}" disabled="disabled">
+                                <select>
+                                    <option value="01:00">01:00</option>
+                                    <option value="02:00">02:00</option>
+                                    <option value="03:00">03:00</option>
+                                    <option value="04:00">04:00</option>
+                                    <option value="05:00">05:00</option>
+                                    <option value="06:00">06:00</option>
+                                    <option value="07:00">07:00</option>
+                                    <option value="08:00">08:00</option>
+                                    <option value="09:00">09:00</option>
+                                    <option value="10:00">10:00</option>
+                                    <option value="11:00">11:00</option>
+                                </select>
+                            </div>
+                            <div class="meridian dropdown" data-dropdown-class="meridian" data-value="{{ start_time|meredian }}" disabled="disabled">
+                                <select>
+                                    <option value="a.m.">a.m.</option>
+                                    <option value="p.m.">p.m.</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="clr"></div>
+            </div>
+            <div class="jump-popup__date-row">
+                <div class="jump-popup__date-cell">
+                    <div class="jump-popup__legend-wrapper">
+                        <span class="jump-popup__legend">Select End Date</span>
+                    </div>
+                    <div class="end-date inline">
+                        <div class="date dropdown">
+                            <input type="text" value="{% if end_date %}{{ end_date|date:"SHORT_DATE_FORMAT"}}{% else %}{% now "SHORT_DATE_FORMAT" %}{% endif %}">
+                        </div>
+                    </div>
+                </div>
+                <div class="jump-popup__time-cell">
+                    <div class="jump-popup__legend-wrapper">
+                        <div class="checkbox jump-popup__checkbox">
+                            <input id="endTimeJumpToDateCheckbox" type="checkbox" class="end-time-checkbox">
+                            <label for="endTimeJumpToDateCheckbox"></label>
+                            <span class="jump-popup__legend">End Time</span>
+                        </div>
+                    </div>
+                    <div class="end-time inline" disabled="disabled">
+                        <div class="timepicker ">
+                            <div class="time dropdown" data-dropdown-class="time" data-value="{{ end_time|hour12 }}" disabled="disabled">
+                                <select>
+                                    <option value="01:00">01:00</option>
+                                    <option value="02:00">02:00</option>
+                                    <option value="03:00">03:00</option>
+                                    <option value="04:00">04:00</option>
+                                    <option value="05:00">05:00</option>
+                                    <option value="06:00">06:00</option>
+                                    <option value="07:00">07:00</option>
+                                    <option value="08:00">08:00</option>
+                                    <option value="09:00">09:00</option>
+                                    <option value="10:00">10:00</option>
+                                    <option value="11:00">11:00</option>
+                                </select>
+                            </div>
+                            <div class="meridian dropdown" data-dropdown-class="meridian" data-value="{{ end_time|meredian }}" disabled="disabled">
+                                <select>
+                                    <option value="a.m.">a.m.</option>
+                                    <option value="p.m.">p.m.</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="clr"></div>
+            </div>
+            <div class="jump-to-date-wrapper">
+                <a class="jump-to-date-wrapper__button button ajax" href="{% events_filter_url request eventsFilter exclude="datetime" %}"
+                   data-base-url-query="{% events_filter_url request eventsFilter exclude="datetime" %}">
+                    Jump to Date
+                </a>
+            </div>
+            <!--
             <div class="date-row">
                 <div class="checkbox">
                     <input id="dateJumpToDateCheckbox" type="checkbox" class="date-checkbox" checked>
@@ -120,7 +227,8 @@
                    data-base-url-query="{% events_filter_url request eventsFilter exclude="datetime" %}">
                     Jump to Date
                 </a>
-            </div>            
+            </div>
+            -->
         </div>
     </div>
 </div> 
