--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -40,6 +40,17 @@
     <script src="{{STATIC_URL}}js/create_event/description.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/create_event/price.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/create_event/boolean_tags.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery-ui.multidatespicker.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery.ui.timepicker.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery.mtz.monthpicker.js" type="text/javascript"></script>
+
+    <!-- Start when widget -->
+    <script src="{{STATIC_URL}}js/create_event/when/multiday-event.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/create_event/when/new-month-picker.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/create_event/when/timespicker.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/create_event/when/dayspicker.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/create_event/when/when.js" type="text/javascript"></script>    
+
     <script src="{{STATIC_URL}}js/create_event/create_event_page.js" type="text/javascript"></script>
 {% endblock %}
 
