--- a/alpha/event/static/styles/styles-new.css
+++ b/alpha/event/static/styles/styles-new.css
@@ -20,6 +20,8 @@ table td {
     text-overflow: ellipsis;
     white-space: nowrap;
     font-weight: normal;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .content-wrapper h1 a {
