--- a/alpha/home/templates/pagination.html
+++ b/alpha/home/templates/pagination.html
@@ -1,23 +1,43 @@
 {% load endless %}
+{% load common_tags %}
 
 {% if pages|length > 1 %}
-    <div class="profile-table-pagination">
-        <span class="pagintation-wrapper">
-            {% get_pages %}
-            {% if pages.current.is_first %}
-                <span class="prev"></span>
-            {% else %}
-                <a class="prev" href="{{ pages.previous.url }}"></a>
-            {% endif %}
-            <span class="page-info">
-                {{ pages.current }} of {{ pages|length }}
-            </span>
+    <div class="entry-navigation-np">
+        <p>
+            <ul>
+                {% get_pages %}
 
-            {% if pages.current.is_last %}
-                <span class="next"></span>
-            {% else %}
-                <a class="next" href="{{ pages.next.url }}"></a>
-            {% endif %}
-        </span>
+                <span class="step-links">
+                    {% if pages.current.is_first %}
+                        <span class="prev">
+                            prev
+                        </span>
+                    {% else %}
+                        <a href="{{ pages.previous.url }}" class="prev">
+                            prev
+                        </a>
+                    {% endif %}
+
+                    {% for page in pages %}
+                        {% if page|args:10|call:'is_in_range' %}
+                            <a href="{{ page.url }}"
+                                class="page{% if page.is_current %} current{%endif%}">
+                                {{ page.number }}
+                            </a>
+                        {% endif %}
+                    {% endfor %}
+
+                    {% if pages.current.is_last %}
+                        <span class="next">
+                            next
+                        </span>
+                    {% else %}
+                        <a href="{{ pages.next.url }}" class="next">
+                            next
+                        </a>
+                    {% endif %}
+                </span>
+            </ul>
+        </p>
     </div>
 {% endif %}
