--- a/alpha/accounts/templates/accounts/_order_advertising_table.html
+++ b/alpha/accounts/templates/accounts/_order_advertising_table.html
@@ -1,4 +1,5 @@
 {% load endless %}
+{% load cf_pagination %}
 
 {% paginate 20 advertising_orders using "advertising_orders" %}
 
@@ -28,24 +29,4 @@
     {% endfor %}
 </table>
 
-{% if pages|length > 1 %}
-    <div class="profile-table-pagination">
-        <span class="pagintation-wrapper">
-            {% get_pages %}
-            {% if pages.current.is_first %}
-                <span class="prev"></span>                    
-            {% else %}                
-                <a class="prev" href="{{ pages.previous.url }}"></a>
-            {% endif %}
-            <span class="page-info">
-                {{ pages.current }} of {{ pages|length }}
-            </span>
-
-            {% if pages.current.is_last %}
-                <span class="next"></span>                    
-            {% else %}
-                <a class="next" href="{{ pages.next.url }}"></a>
-            {% endif %}
-        </span>        
-    </div>
-{% endif %}
+{% cf_pagination %}
