--- a/alpha/accounts/templates/accounts/_reminder_events_table.html
+++ b/alpha/accounts/templates/accounts/_reminder_events_table.html
@@ -1,6 +1,6 @@
 {% load endless %}
 {% load event_tags %}
-{% load common_tags %}
+{% load cf_pagination %}
 
 {% paginate 6 profile.reminder_single_events_in_future  using "reminder_page" as reminder_events %}
 
@@ -21,44 +21,5 @@
             no reminder events
         </p>
     {%endfor%}
-    {% if pages|length > 1 %}
-        <div class="entry-navigation-np">
-            <p>
-                <ul>
-                    {% get_pages %}
-
-                    <span class="step-links">
-                        {% if pages.current.is_first %}
-                            <span class="prev">
-                                prev
-                            </span>
-                        {% else %}
-                            <a href="{{ pages.previous.url }}" class="prev">
-                                prev
-                            </a>
-                        {% endif %}
-
-                        {% for page in pages %}
-                            {% if page|args:10|call:'is_in_range' %}
-                                <a href="{{ page.url }}"
-                                    class="page{% if page.is_current %} current{%endif%}">
-                                    {{ page.number }}
-                                </a>
-                            {% endif %}
-                        {% endfor %}
-
-                        {% if pages.current.is_last %}
-                            <span class="next">
-                                next
-                            </span>
-                        {% else %}
-                            <a href="{{ pages.next.url }}" class="next">
-                                next
-                            </a>
-                        {% endif %}
-                    </span>
-                </ul>
-            </p>
-        </div>
-    {% endif %}
+    {% cf_pagination %}
 </div>
