--- a/alpha/accounts/templates/venue_accounts/_venue_events_table.html
+++ b/alpha/accounts/templates/venue_accounts/_venue_events_table.html
@@ -2,59 +2,39 @@
 {% load endless %}
 {% load cropping %}
 {% load event_tags %}
+{% load cf_pagination %}
 
-
-{% paginate 6 venue_events %}
+{% paginate 6 venue_events using "events_page" %}
 <div class="account-entry-wrapper entry-wrapper">
-{% for event in venue_events %}    
-    <div class="entry-info {% if private %}{% if not event.is_featured %}with-all-actions{% else %}without-make-feature-action{% endif %}{% endif %}">
-        {% short_single_event event %}
+    {% for event in venue_events %}    
+        <div class="entry-info {% if private %}{% if not event.is_featured %}with-all-actions{% else %}without-make-feature-action{% endif %}{% endif %}">
+            {% short_single_event event %}
 
-        {% if private %}
-            <div class="event-edit-actions">
-                <a href="{% url 'event_edit' event.authentication_key %}">
-                    Edit
-                </a>
-                <a href="{% url 'event_copy' event.authentication_key %}">
-                    Copy
-                </a>
-                <a href="{% url 'event_remove' event.authentication_key %}" class="danger-action">
-                    Delete
-                </a>
-                {% if not event.is_featured %}
-                    <a href="{% url 'event_setup_featured' event.authentication_key %}">
-                        Make Featured Event
+            {% if private %}
+                <div class="event-edit-actions">
+                    <a href="{% url 'event_edit' event.authentication_key %}">
+                        Edit
                     </a>
-                {% endif %}
-            </div>
-        {% endif %}
-        <div class="clr"></div>
-    </div>
-{% empty %}
-    <p>
-        no active events
-    </p>
-{%endfor%}
+                    <a href="{% url 'event_copy' event.authentication_key %}">
+                        Copy
+                    </a>
+                    <a href="{% url 'event_remove' event.authentication_key %}" class="danger-action">
+                        Delete
+                    </a>
+                    {% if not event.is_featured %}
+                        <a href="{% url 'event_setup_featured' event.authentication_key %}">
+                            Make Featured Event
+                        </a>
+                    {% endif %}
+                </div>
+            {% endif %}
+            <div class="clr"></div>
+        </div>
+    {% empty %}
+        <p>
+            no active events
+        </p>
+    {%endfor%}
+    {% cf_pagination %}
 </div>
 
-<div class="entry-navigation-np">
-    <p>
-        <ul>
-            {% get_pages %} 
-
-            <span class="step-links">
-                {% if not pages.current.is_first %}                    
-                    <a href="{{ pages.previous.url }}">
-                        <img src="{{STATIC_URL}}images/entry-prev.png">
-                    </a>
-                {% endif %}
-
-                {% if not pages.current.is_last %}                
-                    <a href="{{ pages.next.url }}">
-                        <img src="{{STATIC_URL}}images/entry-next.png">
-                    </a>
-                {% endif %}                
-            </span>
-        </ul>
-    </p>
-</div>
