--- a/alpha/accounts/templates/venue_accounts/_venue_featured_stats_table.html
+++ b/alpha/accounts/templates/venue_accounts/_venue_featured_stats_table.html
@@ -1,6 +1,7 @@
 {% load endless %}
+{% load cf_pagination %}
 
-{% paginate 6 featured_events_stats %}
+{% paginate 6 featured_events_stats using "featured_stats_page" %}
 
 <table class="profile-table" celpadding="0" cellspacing="0">
     <tr>
@@ -36,25 +37,4 @@
     </tr>
     {% endfor %}
 </table>
-
-{% if pages|length > 1 %}
-    <div class="profile-table-pagination">
-        <span class="pagintation-wrapper">
-            {% get_pages %}
-            {% if pages.current.is_first %}
-                <span class="prev"></span>            
-            {% else %}
-                <a class="prev" href="{{ pages.previous.url }}"></a>
-            {% endif %}
-            <span class="page-info">
-                {{ pages.current }} of {{ pages|length }}
-            </span>
-
-            {% if pages.current.is_last %}
-                <span class="next"></span>                    
-            {% else %}
-                <a class="next" href="{{ pages.next.url }}"></a>
-            {% endif %}
-        </span>        
-    </div>
-{% endif %}
+{% cf_pagination %}
