--- a/alpha/accounts/templates/venue_accounts/private_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/private_venue_account.html
@@ -17,7 +17,7 @@
     </script>
     <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/event-actions.js"></script>
-    <script src="{{STATIC_URL}}js/accounts/venue_account.js"></script>
+    <script src="{{STATIC_URL}}js/accounts/venue-account.js"></script>
     <script src="{{STATIC_URL}}js/tabs.js"></script>
     
     <!--script src="{{ STATIC_URL }}js/prprofile.js" type="text/javascript"></script-->
@@ -25,193 +25,157 @@
 
 
 {% block page %}
-    <div class="primary-content">
-        <h1>
-            {{ venue_account.venue.name }}<a href="{% url 'userena_profile_detail' venue_account.account.user.username %}">({{ venue_account.account.user.username }})</a>
-        </h1>
-        <div class="account-profile">
-            <div class="primary-wrapper account-profile">
-                <div class="account-left">
-                    <div class="venue-account-avatar">
-                        {% if venue_account.picture %}
-                            <img src="{% cropped_thumbnail venue_account "cropping" width=154 %}" height="154px" weight="154px">
-                        {% else %}
-                            <img src="{{STATIC_URL}}images/default-event.jpg" height="154px" weight="154px">
-                        {% endif %}
-                    </div>                    
-                    <div>
-                        <div>
-                            <a class="button edit-event-account-button" href="{% url 'advertising_setup' %}">
-                                Create New Ad
-                            </a>
+    <h1>
+        {{ venue_account.venue.name }}
+    </h1>
+    <div class="account-profile account-primary-content">
+        <div class="primary-wrapper">
+            <table celpadding="0" cellspacing="0">
+                <tr>
+                    <td>
+                        <div class="venue-account-avatar">
+                            {% if venue_account.picture %}
+                                <img src="{% cropped_thumbnail venue_account "cropping" width=200 %}" height="200px" weight="200px">
+                            {% else %}
+                                <img src="{{STATIC_URL}}images/default-event.jpg" height="200px" weight="200px">
+                            {% endif %}
                         </div>
-                        <div>
-                            <a class="button edit-event-account-button" href="{% url 'edit_venue_account' slug=venue_account.slug %}">
-                                Edit Profile
-                            </a>
+                    </td>
+                    <td>
+                        <div class="account-details">
+                            <header class="block-header">
+                                Contact Information
+                            </header>
+                            <table class="contact-info-table">
+                                {% if venue_account.phone %}
+                                    <tr>
+                                        <td>Phone</td>
+                                        <td>{{ venue_account.phone }}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if venue_account.fax %}
+                                    <tr>
+                                        <td>Fax</td>
+                                        <td>{{ venue_account.fax }}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if venue_account.email %}
+                                    <tr>
+                                        <td>Email</td>
+                                        <td>
+                                            <a hred="mailto:{{ venue_account.email }}">
+                                                {{ venue_account.email }}
+                                            </a>
+                                        </td>
+                                    </tr>
+                                {% endif %}
+                                {% if venue_account.site %}
+                                    <tr>
+                                        <td>Website</td>
+                                        <td>
+                                            <a href="{{ venue_account.site }}"  target="_blank">
+                                                {{ venue_account.site }}
+                                            </a>
+                                        </td>
+                                    </tr>
+                                {% endif %}
+                                {% if venue_account.facebook %}
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <a href="{{ venue_account.facebook }}" target="_blank">Facebook</a>
+                                        </td>
+                                    </tr>
+                                {% endif %}
+                                {% if venue_account.twitter %}
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <a href="{{ venue_account.twitter }}" target="_blank">Twitter</a>
+                                        </td>
+                                    </tr>
+                                {% endif %}
+                                {% if venue_account.myspace %}
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <a href="{{ venue_account.myspace }}" target="_blank">Myspace</a>
+                                        </td>
+                                    </tr>
+                                {% endif %}
+                            </table>
+                            
                         </div>
-                        <div class="public-or-private">
-                            <div class="radio">
-                                <input {% if venue_account.public %}checked="checked"{% endif %} id="venue_account_make_public" type="radio" value="public" name="public_or_private"> 
-                                <label for="venue_account_make_public"></label>
-                                <label for="venue_account_make_public">Public</label>
-                            </div>
-                            <div class="radio">
-                                <input {% if not venue_account.public %}checked="checked"{% endif %} id="venue_account_make_private" type="radio" value="private" name="public_or_private"> 
-                                <label for="venue_account_make_private"></label>
-                                <label for="venue_account_make_private">Private</label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="account-details">
+                    </td>
+                </tr>
+            </table>
+            <span class="show-on-map map">
+                Show on map
+            </span>
+            <div id="venue_account_map" style="display: none;"></div>
+
+            {% if venue_account.about %}
+                <div class="about">
                     <header class="block-header">
-                        Contact Information
+                        About Us
                     </header>
-                    <table class="contact-info-table">
-                        {% if venue_account.phone %}
-                            <tr>
-                                <td>
-                                    <img src="{{ STATIC_URL }}/images/phone-profile_icon.png"/>
-                                </td>
-                                <td>
-                                    Phone:
-                                </td>
-                                <td>
-                                    {{ venue_account.phone }}
-                                </td>
-                            </tr>
-                        {% endif %}
-                        {% if venue_account.fax %}
-                            <tr>
-                                <td>
-                                    <img src="{{ STATIC_URL }}/images/fax_profile_icon.png"/>
-                                </td>
-                                <td>
-                                    Fax:
-                                </td>
-                                <td>
-                                    {{ venue_account.fax }}
-                                </td>
-                            </tr>
-                        {% endif %}
-                        {% if venue_account.email %}
-                            <tr>
-                                <td>
-                                    <img src="{{ STATIC_URL }}/images/email_profile_icon.png"/>
-                                </td>
-                                <td>
-                                    Email:
-                                </td>
-                                <td>
-                                    <a href="mailto:{{ venue_account.email }}">
-                                        {{ venue_account.email }}
-                                    </a>
-                                </td>
-                            </tr>
-                        {% endif %}
-                        {% if venue_account.site %}
-                            <tr>
-                                <td>
-                                    <img src="{{ STATIC_URL }}/images/website_profile_icon.png"/>
-                                </td>
-                                <td>
-                                    Website:
-                                </td>
-                                <td>
-                                    <a href="{{ venue_account.site }}" target="_blank">{{ venue_account.site }}</a>
-                                </td>
-                            </tr>
-                        {% endif %}
-                        {% if venue_account.facebook %}
-                            <tr>
-                                <td>
-                                    <img src="{{ STATIC_URL }}/images/fb_profile_icon.png"/>
-                                </td>
-                                <td>
-                                    <a href="{{ venue_account.facebook }}" target="_blank">
-                                        Facebook
-                                    </a>
-                                </td>
-                            </tr>
-                        {% endif %}
-                        {% if venue_account.twitter %}
-                            <tr>
-                                <td>
-                                    <img src="{{ STATIC_URL }}/images/twitter.png"/>
-                                </td>
-                                <td>
-                                    <a href="{{ venue_account.twitter }}" target="_blank">
-                                        Twitter
-                                    </a>
-                                </td>
-                            </tr>
-                        {% endif %}
-                        {% if venue_account.myspace %}
-                            <tr>
-                                <td>
-                                    <img src="{{ STATIC_URL }}/images/myspace_profile_icon.png"/>
-                                </td>
-                                <td>
-                                    <a href="{{ venue_account.myspace }}" target="_blank">
-                                        Myspace
-                                    </a>
-                                </td>
-                            </tr>
-                        {% endif %}
-                        <tr>
-                            <td>
-                                <img src="{{ STATIC_URL }}/images/map_profile_icon.png"/>
-                            </td>
-                            <td>
-                                Map:
-                            </td>
-                            <td>
-                                <div id="venue_account_map" class="map"></div>
-                            </td>
-                        </tr>
-                    </table>
+                    {{ venue_account.about|safe }}
                 </div>
+            {% endif %}
 
-                <div class="clr"></div>
+            <div class="tabs-container">
+                <table class="tabs" data-page-id="private-venue-account" cellpadding="0" cellspacing="0">
+                    <tr>
+                        <td data-tab-id="venue-events" {% if active_tab == "venue-events" %}class="current"{% endif %}>
+                            <span>Venue Events</span>
+                        </td>
+                        <td data-tab-id="venue-featured-events" {% if active_tab == "venue-featured-events" %}class="current"{% endif %}>
+                            <span>Featured Events</span>
+                        </td>
+                        <td data-tab-id="venue-archived-events" {% if active_tab == "venue-archived-events" %}class="current"{% endif %}>
+                            <span>Archived events</span>
+                        </td>
+                        <td data-tab-id="venue-advertising-stats" {% if active_tab == "venue-advertising-stats" %}class="current"{% endif %}>
+                           <span>Advertising Stats</span>
+                        </td>
+                    </tr>
+                </table>
+                <div class="box{% if active_tab == "venue-events" %} visible{% endif %}">
+                    {% include 'venue_accounts/_venue_events_table.html' %}
+                </div>
+                <div class="box{% if active_tab == "venue-featured-events" %} visible{% endif %}">
+                    {% include 'venue_accounts/_venue_featured_events_table.html' %}
+                </div>
+                <div class="box{% if active_tab == "venue-archived-events" %} visible{% endif %}">
+                    {% include 'venue_accounts/_venue_archived_events_table.html' %}
+                </div>
+                <div class="box{% if active_tab == "venue-advertising-stats" %} visible{% endif %} advertising-stats">
+                    {% include 'advertising/stats/list.html' with campaigns=venue_account.campaigns %}
+                </div>
+            </div>
+        </div>        
+    </div>
 
-                {% if venue_account.about %}
-                    <div class="about-us">
-                        <header class="block-header">
-                            About Us
-                        </header>
-                        {{ venue_account.about|safe }}
-                    </div>
-                {% endif %}
-            </div>            
-        </div>
-
-        <div class="tabs-container">
-            <ul class="tabs" data-page-id="private-venue-account">
-                <li data-tab-id="venue-events" {% if active_tab == "venue-events" %}class="current"{% endif %}>
-                    <span>Venue Events</span>
-                </li>
-                <li data-tab-id="venue-featured-events" {% if active_tab == "venue-featured-events" %}class="current"{% endif %}>
-                    <span>Featured Events</span>
-                </li>
-                <li data-tab-id="venue-archived-events" {% if active_tab == "venue-archived-events" %}class="current"{% endif %}>
-                    <span>Archived events</span>
-                </li>
-                <li data-tab-id="venue-advertising-stats" {% if active_tab == "venue-advertising-stats" %}class="current"{% endif %}>
-                   <span>Advertising Stats</span>
-                </li>
-            </ul>
-            <div class="box{% if active_tab == "venue-events" %} visible{% endif %}">
-                {% include 'venue_accounts/_venue_events_table.html' %}
+    <div class="settings account-help-container">
+        <a class="button special" href="{% url 'userena_profile_detail' venue_account.account.user.username %}">
+            use web as <span>{{ venue_account.account.user.username }}</span>
+        </a>
+        <a class="button" href="{% url 'advertising_setup' %}">
+            Create New Ad
+        </a>
+        <a class="button" href="{% url 'edit_venue_account' slug=venue_account.slug %}">
+            Edit Profile
+        </a>
+        <div class="public-or-private">
+            <div class="radio">
+                <input {% if venue_account.public %}checked="checked"{% endif %} id="venue_account_make_public" type="radio" value="public" name="public_or_private"> 
+                <label for="venue_account_make_public"></label>
+                <label for="venue_account_make_public">Public</label>
             </div>
-            <div class="box{% if active_tab == "venue-featured-events" %} visible{% endif %}">
-                {% include 'venue_accounts/_venue_featured_events_table.html' %}
-            </div>
-            <div class="box{% if active_tab == "venue-archived-events" %} visible{% endif %}">
-                {% include 'venue_accounts/_venue_archived_events_table.html' %}
-            </div>
-            <div class="box{% if active_tab == "venue-advertising-stats" %} visible{% endif %} advertising-stats">
-                {% include 'advertising/stats/list.html' with campaigns=venue_account.campaigns %}
+            <div class="radio">
+                <input {% if not venue_account.public %}checked="checked"{% endif %} id="venue_account_make_private" type="radio" value="private" name="public_or_private"> 
+                <label for="venue_account_make_private"></label>
+                <label for="venue_account_make_private">Private</label>
             </div>
         </div>
     </div>
