--- a/alpha/event/static/styles/event/posting.css
+++ b/alpha/event/static/styles/event/posting.css
@@ -16,6 +16,7 @@
     vertical-align: middle;
     font-size: 16px;
     font-weight: bold;
+    margin: 0;
 }
 
 .event-posting-form {
@@ -214,6 +215,7 @@
     vertical-align: middle;
     font-size: 16px;
     font-weight: bold;
+    margin: 0;
 }
 
 .event-posting-tips .tip {
