--- a/alpha/event/templates/events/_browse_left_menu.html
+++ b/alpha/event/templates/events/_browse_left_menu.html
@@ -74,7 +74,8 @@
         <ul class="categories tags">
             {% for tag in tags %}
                 <li class="category{% if tag.tag__name in eventsFilter.tags %} selected{% endif %}">
-                    <a href="{% events_filter_url request eventsFilter function="tags" tag=tag.tag__name %}"  {% if tag.tag__name in eventsFilter.tags %} class="selected"{% endif %}
+                    <a href="{% events_filter_url request eventsFilter function="tags" tag=tag.tag__name %}"
+                       {% if tag.tag__name in eventsFilter.tags %} class="selected"{% endif %}
                        title="{{ tag.tag__name }}">
                         {{ tag.tag__name|shorten_string:20 }}
                     </a>
