--- a/alpha/event/templates/events/search_pad.html
+++ b/alpha/event/templates/events/search_pad.html
@@ -24,11 +24,10 @@
         </div>
         {% include 'events/_search_pad_event_details.html' %}
     </div>
-    <div class="clr">
+    <div class="search-pad-advertising">
+        <div class="advertising-container">
+            {% advertising_group "300x600" %}
+        </div>
     </div>
-</div>
-<div class="search-pad-advertising">
-    <div class="advertising-container">
-        {% advertising_group "300x600" %}
-    </div>
+    <div class="clr"></div>
 </div>
