--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -15,7 +15,7 @@
             </a>
         </li>
         <li>
-            <a href="javascript: void;" class="search-pad-popup-open-button">
+            <a href="javascript:void(0);" class="search-pad-popup-open-button">
                 Search Pad
                 <span class="hover-effect"></span>
             </a>
