--- a/alpha/event/static/styles/styles-new.css
+++ b/alpha/event/static/styles/styles-new.css
@@ -20,8 +20,6 @@ table td {
     text-overflow: ellipsis;
     white-space: nowrap;
     font-weight: normal;
-    margin-top: 20px;
-    margin-bottom: 10px;
 }
 
 .content-wrapper h1 a {
@@ -113,6 +111,7 @@ ul.errorlist li {
 
 .search-pad-menu .left-menu {
     background: #fdfcfc;
+    margin-right: 10px;
 }
 
 .left-menu .switchers {
