--- a/alpha/event/templates/events/_searchpad_left_menu.html
+++ b/alpha/event/templates/events/_searchpad_left_menu.html
@@ -1,5 +1,6 @@
 {% load query_filter %}
 {% load endless %}
+{% load common_tags %}
 
 <div class="left-menu">
     <div class="all-events">
@@ -13,8 +14,10 @@
         <ul class="top5-tags categories tags">
             {%for tag in top10_tags%}
             <li class="category">
-                <a href="{% events_filter_url request eventsFilter function="tags" tag=tag.tag__name %}" class="ajax{% if tag.tag__name in eventsFilter.tags %} selected{% endif %}"  >
-                    {{tag.tag__name}}
+                <a href="{% events_filter_url request eventsFilter function="tags" tag=tag.tag__name %}"
+                   class="ajax{% if tag.tag__name in eventsFilter.tags %} selected{% endif %}"
+                   title="{{ tag.tag__name }}">
+                    {{ tag.tag__name|shorten_string:20 }}
                 </a>
             </li>
             {%endfor%}
@@ -66,7 +69,7 @@
                 Free
             </a>
         </li>
-        <li>
+        <li class="last">
             <a href="{% events_filter_url request eventsFilter function="family"  exclude="tag" %}" class="ajax">
                 Family
             </a>
