--- a/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
+++ b/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
@@ -24,7 +24,7 @@
                 </a>
             </td>
             <td>
-                <a href="javascript:void;"  class="jump jump-popup-opener">
+                <a href="javascript:void(0);"  class="jump jump-popup-opener">
                     Jump to date
                 </a>
             </td>
@@ -33,101 +33,113 @@
     
     <div class="jump-popup">
         <div>
-            <div class="date-row">
-                <div class="checkbox">
-                    <input id="dateJumpToDatePopupCheckbox" type="checkbox" class="date-checkbox" checked>
-                    <label for="dateJumpToDatePopupCheckbox">  </label>
-                </div>                
-                <div class="start-date inline">
-                    Select Start Date
-                    <div class="date dropdown">
-                        <input type="text" 
-                            value="{% if start_date %}{{ start_date|date:"SHORT_DATE_FORMAT"}}{% else %}{% now "SHORT_DATE_FORMAT" %}{% endif %}">
+            <div class="jump-popup__date-row">
+                <div class="jump-popup__date-cell">
+                    <div class="jump-popup__legend-wrapper">
+                        <div class="checkbox">
+                            <input id="dateJumpToDatePopupCheckbox" type="checkbox" class="date-checkbox" checked>
+                            <label for="dateJumpToDatePopupCheckbox">  </label>
+                            <span class="jump-popup__legend">Select Start Date</span>
+                        </div>
+                    </div>
+                    <div class="start-date inline">
+                        <div class="date dropdown">
+                            <input type="text"
+                                value="{% if start_date %}{{ start_date|date:"SHORT_DATE_FORMAT"}}{% else %}{% now "SHORT_DATE_FORMAT" %}{% endif %}">
+                        </div>
                     </div>
                 </div>
-                <div class="end-date inline">
-                    Select End Date
-                    <div class="date dropdown">
-                        <input type="text" value="{% if end_date %}{{ end_date|date:"SHORT_DATE_FORMAT"}}{% else %}{% now "SHORT_DATE_FORMAT" %}{% endif %}">
+                <div class="jump-popup__time-cell">
+                    <div class="jump-popup__legend-wrapper">
+                        <div class="checkbox jump-popup__checkbox">
+                            <input id="startTimeJumpToDatePopupCheckbox" type="checkbox" class="start-time-checkbox">
+                            <label for="startTimeJumpToDatePopupCheckbox"> </label>
+                            <span class="jump-popup__legend">Start Time</span>
+                        </div>
+                    </div>
+
+                    <div class="start-time inline" disabled="disabled">
+                        <div class="timepicker">
+                            <div class="time dropdown" data-dropdown-class="time" data-value="{{ start_time|hour12 }}" disabled="disabled">
+                                <select>
+                                    <option value="01:00">01:00</option>
+                                    <option value="02:00">02:00</option>
+                                    <option value="03:00">03:00</option>
+                                    <option value="04:00">04:00</option>
+                                    <option value="05:00">05:00</option>
+                                    <option value="06:00">06:00</option>
+                                    <option value="07:00">07:00</option>
+                                    <option value="08:00">08:00</option>
+                                    <option value="09:00">09:00</option>
+                                    <option value="10:00">10:00</option>
+                                    <option value="11:00">11:00</option>
+                                </select>
+                            </div>
+                            <div class="meridian dropdown" data-dropdown-class="meridian" data-value="{{ start_time|meredian }}" disabled="disabled">
+                                <select>
+                                    <option value="a.m.">a.m.</option>
+                                    <option value="p.m.">p.m.</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div class="clr"></div>
             </div>
-            <div class="time-row">
-                <div class="checkbox">
-                    <input id="startTimeJumpToDatePopupCheckbox" type="checkbox" class="start-time-checkbox">
-                    <label for="startTimeJumpToDatePopupCheckbox"> </label>
-                </div>
-                
-                <div class="start-time inline" disabled="disabled">
-                    <span>Start Time</span>
-                    <div class="timepicker">
-                        <div class="time dropdown" data-dropdown-class="time" data-value="{{ start_time|hour12 }}" disabled="disabled">
-                            <select>
-                                <option value="01:00">01:00</option>
-                                <option value="02:00">02:00</option>
-                                <option value="03:00">03:00</option>
-                                <option value="04:00">04:00</option>
-                                <option value="05:00">05:00</option>
-                                <option value="06:00">06:00</option>
-                                <option value="07:00">07:00</option>
-                                <option value="08:00">08:00</option>
-                                <option value="09:00">09:00</option>
-                                <option value="10:00">10:00</option>
-                                <option value="11:00">11:00</option>
-                            </select>
-                        </div>
-                        <div class="meridian dropdown" data-dropdown-class="meridian" data-value="{{ start_time|meredian }}" disabled="disabled">
-                            <select>
-                                <option value="a.m.">a.m.</option>
-                                <option value="p.m.">p.m.</option>
-                            </select>
+            <div class="jump-popup__date-row">
+                <div class="jump-popup__date-cell">
+                    <div class="jump-popup__legend-wrapper">
+                        <span class="jump-popup__legend">Select End Date</span>
+                    </div>
+                    <div class="end-date inline">
+                        <div class="date dropdown">
+                            <input type="text" value="{% if end_date %}{{ end_date|date:"SHORT_DATE_FORMAT"}}{% else %}{% now "SHORT_DATE_FORMAT" %}{% endif %}">
                         </div>
                     </div>
                 </div>
-
-                <div class="checkbox end-time-checkbox-wrapper">
-                    <input id="endTimeJumpToDatePopupCheckbox" type="checkbox" class="end-time-checkbox">
-                    <label for="endTimeJumpToDatePopupCheckbox"> </label>
-                </div>
-
-                <div class="end-time inline" disabled="disabled">                  
-                    <span>End Time</span>
-                    <div class="timepicker ">
-                        <div class="time dropdown" data-dropdown-class="time" data-value="{{ end_time|hour12 }}" disabled="disabled">
-                            <select>
-                                <option value="01:00">01:00</option>
-                                <option value="02:00">02:00</option>
-                                <option value="03:00">03:00</option>
-                                <option value="04:00">04:00</option>
-                                <option value="05:00">05:00</option>
-                                <option value="06:00">06:00</option>
-                                <option value="07:00">07:00</option>
-                                <option value="08:00">08:00</option>
-                                <option value="09:00">09:00</option>
-                                <option value="10:00">10:00</option>
-                                <option value="11:00">11:00</option>
-                            </select>
+                <div class="jump-popup__time-cell">
+                    <div class="jump-popup__legend-wrapper">
+                        <div class="checkbox jump-popup__checkbox">
+                            <input id="endTimeJumpToDatePopupCheckbox" type="checkbox" class="end-time-checkbox">
+                            <label for="endTimeJumpToDatePopupCheckbox"> </label>
+                            <span class="jump-popup__legend">End Time</span>
                         </div>
-                        <div class="meridian dropdown" data-dropdown-class="meridian" data-value="{{ end_time|meredian }}" disabled="disabled">
-                            <select>
-                                <option value="a.m.">a.m.</option>
-                                <option value="p.m.">p.m.</option>
-                            </select>
+                    </div>
+                    <div class="end-time inline" disabled="disabled">
+                        <div class="timepicker ">
+                            <div class="time dropdown" data-dropdown-class="time" data-value="{{ end_time|hour12 }}" disabled="disabled">
+                                <select>
+                                    <option value="01:00">01:00</option>
+                                    <option value="02:00">02:00</option>
+                                    <option value="03:00">03:00</option>
+                                    <option value="04:00">04:00</option>
+                                    <option value="05:00">05:00</option>
+                                    <option value="06:00">06:00</option>
+                                    <option value="07:00">07:00</option>
+                                    <option value="08:00">08:00</option>
+                                    <option value="09:00">09:00</option>
+                                    <option value="10:00">10:00</option>
+                                    <option value="11:00">11:00</option>
+                                </select>
+                            </div>
+                            <div class="meridian dropdown" data-dropdown-class="meridian" data-value="{{ end_time|meredian }}" disabled="disabled">
+                                <select>
+                                    <option value="a.m.">a.m.</option>
+                                    <option value="p.m.">p.m.</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="clr"></div>
             </div>
             <div class="jump-to-date-wrapper">
-                <a 
-                    class="jump-to-date-button ajax" href="{% events_filter_url request eventsFilter exclude="datetime" %}" 
-                    data-base-url-query="{% events_filter_url request eventsFilter exclude="datetime" %}"
-                >
+                <a class="jump-to-date-wrapper__button jump-to-date-button button ajax"
+                   href="{% events_filter_url request eventsFilter exclude="datetime" %}"
+                   data-base-url-query="{% events_filter_url request eventsFilter exclude="datetime" %}">
                     Jump to Date
                 </a>
             </div>
-            
         </div>
-
-
     </div>
 </div> 
