--- a/alpha/accounts/static/styles/accounts/accounts.css
+++ b/alpha/accounts/static/styles/accounts/accounts.css
@@ -563,6 +563,10 @@
     width: 685px;
 }
 
+.account-primary-content .primary-wrapper {
+    min-height: 371px;    
+}
+
 .account-entry-wrapper .entry-info {
     padding-right: 7px;
 }
@@ -573,7 +577,6 @@
     padding: 0 5px;
     border: 1px solid #e3e3e3;
     background: #fff;
-
 }
 
 .account-entry-wrapper .event-edit-actions div,
@@ -669,7 +672,7 @@
     font-size: 0.9em;
 }
 
- .ads-stats th {
+.ads-stats th {
     font-size: 12px;
     background: rgb(250,250,250); /* Old browsers */
     /* IE9 SVG, needs conditional override of 'filter' to 'none' */
@@ -688,13 +691,13 @@
     cursor: pointer;
  }
 
- .detailed-view div {
+.detailed-view div {
     float: left;
     width: 245px;
     margin: 25px 15px;
  }
 
- .detailed-view div.right {
+.detailed-view div.right {
     float: right;    
  }
 
@@ -774,23 +777,25 @@
 
 .native-region-combobox {
     position: relative;
-    width: 155px;
+    width: 300px;
 }
 
 .native-region-combobox input {
     width: 100%;
+    border-radius: 0;
 }
 
 .native-region-combobox .ui-button {
     position:absolute;
-    top: 3px;
-    right: -14px;
-    width: 20px;
+    top: 4px;
+    right: -10px;
+    width: 22px;
     height: 20px;
     background: url("/static/images/widgets/dropdown.png") no-repeat;
     border: none;
 
     padding: 0;
+    border-radius: 0;
 }
 
 .native-region-combobox .ui-button * {
@@ -1019,4 +1024,8 @@
     height: 39px !important;
     font-size: 18px;
     margin-top: 25px;
+}
+
+.reminder-button {
+    margin-top:10px;
 }
