--- a/alpha/accounts/templates/accounts/reminder_settings.html
+++ b/alpha/accounts/templates/accounts/reminder_settings.html
@@ -16,136 +16,119 @@
 {% endblock %}
 
 {% block page %}
-    <div class="primary-content">
-        <h1>
-            Reminder Options
-        </h1>
-        <div class="content account-options-wrapper">
-            <div class="main-content account-options">
-                {%if form.errors %}
-                    <div class="errors" style="border:1px solid RED;border-radius:4px;">
-                        <ul style="list-style-type: none;">
-                            <li id="all-info">
-                                {% for error in form.non_field_errors %}
-                                    <span class="error">{{ error }}</span>
+    <h1>
+        Reminder Options
+    </h1>
+    <div class="primary-content account-primary-content">
+        <div class="primary-wrapper">
+            <form method="post" name="reminder-options" >
+                {% csrf_token %}
+                <div class="reminder-types options options-white">
+                    <header>
+                        Please select the way(s) you would like to reminded about your saved event(s)
+                    </header>
+                    <table>
+                        <tr>
+                            <td class="first">
+                                <div class="checkbox">
+                                    {{ form.reminder_with_website }}
+                                    {{ form.reminder_with_website.label_tag }}                                        
+                                </div>                                    
+                                <label class="label" for="id_reminder_with_website">Website:</label>
+                            </td>
+                            <td>
+                                I will check for my updates on the website
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="first">
+                                <div class="checkbox">
+                                    {{ form.reminder_with_email }}
+                                    {{ form.reminder_with_email.label_tag }}
+                                </div>
+                                <label class="label" for="id_reminder_with_email">Email:</label>
+                            </td>
+                            <td>
+                                {{ form.reminder_email }}
+                                Send to this address
+                                {% for error in form.errors.reminder_email %}
+                                    <div class="error">{{ error }}</div>
                                 {% endfor %}
-                            </li>
-                            <li id="all-info">
-                                {% for error in form.reminder_email.errors %}
-                                    <span class="error">{{ error }}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="first">
+                                <div class="checkbox">
+                                    {{ form.reminder_with_sms }}
+                                    {{ form.reminder_with_sms.label_tag }}
+                                </div>
+                                <label class="label" for="id_reminder_with_sms">SMS:</label>
+                            </td>
+                            <td>
+                                {{ form.reminder_phonenumber }}
+                                Send to this number
+                                {% for error in form.errors.reminder_phonenumber %}
+                                    <div class="error">{{ error }}</div>
                                 {% endfor %}
-                            </li>
-
-                            <li id="all-info">
-                                {% for error in form.reminder_phonenumber.errors %}
-                                    <span class="error">{{ error }}</span>
-                                {% endfor %}
-                            </li>
-                        </ul>
-                    </div>
-                    
-                {% endif %}
-                <form method="post" name="reminder-options" >
-                    {% csrf_token %}
-                    <div class="reminder-types options options-white">
-                        <header>
-                            Please select the way(s) you would like to reminded about your saved event(s)
-                        </header>
-                        <table>
-                            <tr>
-                                <td class="first">
-                                    <div class="checkbox">
-                                        {{ form.reminder_with_website }}
-                                        {{ form.reminder_with_website.label_tag }}                                        
-                                    </div>                                    
-                                    <label class="label" for="id_reminder_with_website">Website:</label>
-                                </td>
-                                <td>
-                                    I will check for my updates on the website
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="first">
-                                    <div class="checkbox">
-                                        {{ form.reminder_with_email }}
-                                        {{ form.reminder_with_email.label_tag }}
-                                    </div>
-                                    <label class="label" for="id_reminder_with_email">Email:</label>
-                                </td>
-                                <td>
-                                    {{ form.reminder_email }}
-                                    Send to this address
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="first">
-                                    <div class="checkbox">
-                                        {{ form.reminder_with_sms }}
-                                        {{ form.reminder_with_sms.label_tag }}
-                                    </div>
-                                    <label class="label" for="id_reminder_with_sms">SMS:</label>
-                                </td>
-                                <td>
-                                    {{ form.reminder_phonenumber }}
-                                    Send to this number
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="reminder-time-options options options-gray">
-                        <header>
-                            Please select the amount of time to remind you about your event(s)
-                        </header>
-                        <table>
-                            <tr {% if form.reminder_active_type.value == "DAYS" %}class="active"{% endif %}>                                
-                                <td class="first">
-                                    <div class="radio">                                        
-                                        <input {% if form.reminder_active_type.value == "DAYS" %}checked="checked"{% endif %} type="radio" id="id_reminder_active_type_0" value="DAYS" name="reminder_active_type">
-                                        <label for="id_reminder_active_type_0"></label>
-                                    </div>
-                                </td>
-                                <td class="second">
-                                    {{ form.reminder_days_before_event }}
-                                </td>
-                                <td>
-                                    Day(s) before the event begins
-                                </td>
-                            </tr>
-                            <tr {% if form.reminder_active_type.value == "HOURS" %}class="active"{% endif %}>
-                                <td class="first">
-                                    <div class="radio">                                        
-                                        <input {% if form.reminder_active_type.value == "HOURS" %}checked="checked"{% endif %} type="radio" id="id_reminder_active_type_1" value="HOURS" name="reminder_active_type">
-                                        <label for="id_reminder_active_type_1"></label>
-                                    </div>
-                                </td>
-                                <td class="second">
-                                    {{ form.reminder_hours_before_event }}
-                                </td>
-                                <td>
-                                    Hour(s) before the event begins
-                                </td>
-                            </tr>
-                            <tr {% if form.reminder_active_type.value == "WEEKDAY" %}class="active"{% endif %}>
-                                <td class="first">
-                                    <div class="radio">                                        
-                                        <input {% if form.reminder_active_type.value == "WEEKDAY" %}checked="checked"{% endif %} type="radio" id="id_reminder_active_type_2" value="WEEKDAY" name="reminder_active_type">
-                                        <label for="id_reminder_active_type_2"></label>
-                                    </div>
-                                </td>
-                                <td class="second">
-                                    <div class="dropdown week-day-reminder" data-dropdown-class="week-day-reminder-list">
-                                        {{ form.reminder_on_week_day }}
-                                    </div>
-                                </td>
-                                <td>
-                                    Send me reminder on this day every week
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <input type="submit" name="submitoptions" class="button submit standart" value="Save" />
-                </form>
-            </div>                
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="reminder-time-options options options-gray">
+                    <header>
+                        Please select the amount of time to remind you about your event(s)
+                    </header>
+                    <table>
+                        <tr {% if form.reminder_active_type.value == "DAYS" %}class="active"{% endif %}>                                
+                            <td class="first">
+                                <div class="radio">                                        
+                                    <input {% if form.reminder_active_type.value == "DAYS" %}checked="checked"{% endif %} type="radio" id="id_reminder_active_type_0" value="DAYS" name="reminder_active_type">
+                                    <label for="id_reminder_active_type_0"></label>
+                                </div>
+                            </td>
+                            <td class="second">
+                                {{ form.reminder_days_before_event }}
+                            </td>
+                            <td>
+                                Day(s) before the event begins
+                            </td>
+                        </tr>
+                        <tr {% if form.reminder_active_type.value == "HOURS" %}class="active"{% endif %}>
+                            <td class="first">
+                                <div class="radio">                                        
+                                    <input {% if form.reminder_active_type.value == "HOURS" %}checked="checked"{% endif %} type="radio" id="id_reminder_active_type_1" value="HOURS" name="reminder_active_type">
+                                    <label for="id_reminder_active_type_1"></label>
+                                </div>
+                            </td>
+                            <td class="second">
+                                {{ form.reminder_hours_before_event }}
+                            </td>
+                            <td>
+                                Hour(s) before the event begins
+                            </td>
+                        </tr>
+                        <tr {% if form.reminder_active_type.value == "WEEKDAY" %}class="active"{% endif %}>
+                            <td class="first">
+                                <div class="radio">                                        
+                                    <input {% if form.reminder_active_type.value == "WEEKDAY" %}checked="checked"{% endif %} type="radio" id="id_reminder_active_type_2" value="WEEKDAY" name="reminder_active_type">
+                                    <label for="id_reminder_active_type_2"></label>
+                                </div>
+                            </td>
+                            <td class="second">
+                                <div class="dropdown week-day-reminder" data-dropdown-class="week-day-reminder-list">
+                                    {{ form.reminder_on_week_day }}
+                                </div>
+                            </td>
+                            <td>
+                                Send me reminder on this day every week
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <input type="submit" name="submitoptions" class="button reminder-button" value="Save" />
+            </form>
         </div>
     </div>
+
+    {% include 'accounts/_account_settings_menu.html' %}
 {% endblock %}
