--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-list.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-list.html
@@ -18,17 +18,19 @@
     <div class="tabs-container">
         {% cf_admin_menu "admin_advertising" %}
         <div class="box visible options">
-            <ul class="tabs">
-                <li class="current">
-                    <span>Advertising list</span>
-                </li>
-                <li>
-                    <a href="{% url 'admin_advertising_setup' %}"><span>Create new campaign</span></a>
-                </li>
-                <li>
-                    <a href="{% url 'admin_advertising_review' %}"><span>Review ads</span></a>
-                </li>
-            </ul>
+            <table class="tabs" cellpadding="0" cellspacing="0">
+                <tr>
+                    <td class="current">
+                        <span>Advertising list</span>
+                    </td>
+                    <td>
+                        <a href="{% url 'admin_advertising_setup' %}"><span>Create new campaign</span></a>
+                    </td>
+                    <td>
+                        <a href="{% url 'admin_advertising_review' %}"><span>Review ads</span></a>
+                    </td>
+                </tr>
+            </table>
             <div class="box visible advertising-stats">
                 {% admin_advertising_campaigns campaigns_filter %}
             </div>
