--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-review.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-review.html
@@ -15,17 +15,19 @@
     <div class="tabs-container">
         {% cf_admin_menu "admin_advertising" %}
         <div class="box visible options">
-            <ul class="tabs">
-                <li>
-                    <a href="{% url 'admin_advertising' %}"><span>Advertising list</span></a>
-                </li>
-                <li>
-                    <a href="{% url 'admin_advertising_setup' %}"><span>Create new campaign</span></a>
-                </li>
-                <li class="current">
-                    <span>Review ads</span>
-                </li>
-            </ul>
+            <table class="tabs" cellpadding="0" cellspacing="0">
+                <tr>
+                    <td>
+                        <a href="{% url 'admin_advertising' %}"><span>Advertising list</span></a>
+                    </td>
+                    <td>
+                        <a href="{% url 'admin_advertising_setup' %}"><span>Create new campaign</span></a>
+                    </td>
+                    <td class="current">
+                        <span>Review ads</span>
+                    </td>
+                </tr>
+            </table>
             <div class="box visible">
                 <table class="profile-table" celpadding="0" cellspacing="0">
                     <tr>
